grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        // Block constructs (no period needed for the wrapper)
        $._block_statement,
        // Regular period-terminated statements
        seq($._statement_body, "."),
        // Chained statements: KEYWORD: item1, item2.
        $.chained_statement,
      ),

    chained_statement: ($) =>
      seq(
        $._chain_head,
        ":",
        commaSep1($._chain_body),
        ".",
      ),

    _chain_head: ($) =>
      choice(
        kw("DATA"),
        kw("TYPES"),
        kw("CONSTANTS"),
        kw("STATICS"),
        kwSeq("CLASS-DATA"),
        kwSeq("FIELD-SYMBOLS"),
        kw("METHODS"),
        kwSeq("CLASS-METHODS"),
        kw("INTERFACES"),
        kw("ALIASES"),
        kw("EVENTS"),
        kwSeq("CLASS-EVENTS"),
        kw("INCLUDE"),
        kw("WRITE"),
        kw("TABLES"),
      ),

    _chain_body: ($) =>
      repeat1(choice($._expression, $._type_spec, $._data_additions)),

    // =========================================================================
    // Block statements (compound)
    // =========================================================================

    comment: (_$) => token(seq('"', /.*/)),

    // =========================================================================
    // Identifiers
    // =========================================================================

    _identifier_chars: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    identifier: ($) =>
      choice($._identifier_chars, $.namespace_identifier),

    field_symbol: (_$) => /<[a-zA-Z_][a-zA-Z0-9_]*>/,

    // =========================================================================
    // Literals
    // =========================================================================

    integer_literal: (_$) => /\d+/,
    number_literal: ($) => choice($.integer_literal, $.float_literal),

    string_literal: (_$) =>
      token(seq("'", repeat(choice(/[^'\n]/, "''")), "'")),

    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.field_symbol,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.component_access,
        $.method_call_expression,
        $.dynamic_reference,
        $.table_expression,
        $.new_expression,
        $.value_expression,
        $.ref_expression,
        $.conv_expression,
        $.cast_expression,
        $.exact_expression,
        $.corresponding_expression,
        $.cond_expression,
        $.switch_expression,
        $.filter_expression,
        $.reduce_expression,
        $.inline_data_declaration,
        $.inline_field_symbol,
        $.predicate_expression,
      ),

    binary_expression: ($) =>
      choice(
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("MOD"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("DIV"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.CONCAT, seq($._expression, "&&", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, kw("BIT-AND"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-OR"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-XOR"), $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, $._comparison_operator, $._expression)),
        prec.left(PREC.AND, seq($._expression, kw("AND"), $._expression)),
        prec.left(PREC.OR, seq($._expression, kw("OR"), $._expression)),
        prec.left(PREC.EQUIV, seq($._expression, kw("EQUIV"), $._expression)),
      ),

    _comparison_operator: (_$) =>
      choice(
        "=", "<>", "<", ">", "<=", ">=",
        kw("EQ"), kw("NE"), kw("LT"), kw("GT"), kw("LE"), kw("GE"),
        kw("CO"), kw("CN"), kw("CA"), kw("CS"),
        kw("NA"), kw("NS"), kw("CP"), kw("NP"),
      ),

    named_argument: ($) => seq($.identifier, "=", $._expression),

    inline_data_declaration: ($) =>
      seq(kw("DATA"), "(", $.identifier, ")"),

    new_expression: ($) =>
      seq(kw("NEW"), $._type_reference, "(", optional($._constructor_body), ")"),

    value_expression: ($) =>
      seq(kw("VALUE"), $._type_reference, "(", optional($._constructor_body), ")"),

    ref_expression: ($) =>
      seq(kw("REF"), $._type_reference, "(", $._expression, ")"),

    conv_expression: ($) =>
      seq(kw("CONV"), $._type_reference, "(", $._expression, ")"),

    cast_expression: ($) =>
      seq(kw("CAST"), $._type_reference, "(", $._expression, ")"),

    corresponding_expression: ($) =>
      seq(kw("CORRESPONDING"), $._type_reference, "(", optional($._constructor_body), ")"),

    cond_expression: ($) =>
      seq(kw("COND"), $._type_reference, "(", repeat1($.cond_branch), ")"),

    switch_expression: ($) =>
      seq(kw("SWITCH"), $._type_reference, "(", $._expression, repeat1($.switch_branch), ")"),

    filter_expression: ($) =>
      seq(kw("FILTER"), $._type_reference, "(", $._expression, optional($.filter_where), ")"),

    _type_reference: ($) =>
      choice($.identifier, $.field_symbol, "#"),

    _constructor_body: ($) =>
      choice(
        $._expression,
        repeat1($.named_argument),
        seq(optional(seq(kw("BASE"), $._expression)), repeat1($.value_line)),
        seq(optional($.let_expression), repeat1($.for_expression), $._expression),
      ),

    cond_branch: ($) =>
      choice(
        seq(kw("WHEN"), $._expression, kw("THEN"), $._expression),
        seq(kw("ELSE"), $._expression),
      ),

    switch_branch: ($) =>
      choice(
        seq(kw("WHEN"), $._expression, kw("THEN"), $._expression),
        seq(kw("ELSE"), $._expression),
      ),

    filter_where: ($) =>
      seq(kw("WHERE"), $._expression),

    value_line: ($) =>
      seq("(", optional($._constructor_body), ")"),

    _type_spec: ($) =>
      choice(
        seq(kw("TYPE"), $._type_expression),
        seq(kw("LIKE"), $._type_expression),
        seq(kw("TYPE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("LIKE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("TYPE"), $._table_type),
        seq(kw("LIKE"), $._table_type),
        seq(kw("TYPE"), kw("RANGE"), kw("OF"), $._type_expression),
        seq(kw("TYPE"), kw("LINE"), kw("OF"), $._type_expression),
      ),

    _type_expression: ($) =>
      choice(
        $.identifier,
        $._builtin_type,
        $.component_access,
      ),

    data_statement: ($) =>
      choice(
        seq(kw("DATA"), $.identifier, optional($._type_spec), repeat($._data_additions)),
        // Structured: DATA BEGIN OF / END OF
        seq(kw("DATA"), kw("BEGIN"), kw("OF"), $.identifier, optional(kw("READ-ONLY"))),
        seq(kw("DATA"), kw("END"), kw("OF"), $.identifier),
      ),

    _data_additions: ($) =>
      choice(
        seq(kw("VALUE"), choice($._expression, kwSeq("IS INITIAL"))),
        kw("READ-ONLY"),
        seq(kw("LENGTH"), $._expression),
        seq(kw("DECIMALS"), $._expression),
      ),

    // =========================================================================
    // Phase 2: TYPES
    // =========================================================================

    constants_statement: ($) =>
      choice(
        seq(kw("CONSTANTS"), $.identifier, optional($._type_spec), kw("VALUE"), $._expression),
        seq(kw("CONSTANTS"), kw("BEGIN"), kw("OF"), $.identifier),
        seq(kw("CONSTANTS"), kw("END"), kw("OF"), $.identifier),
      ),

    class_definition: ($) =>
      seq(
        kw("CLASS"), $.identifier, kw("DEFINITION"),
        repeat($._class_def_additions),
        ".",
        optional($._class_def_body),
        kw("ENDCLASS"), ".",
      ),

    _class_def_additions: ($) =>
      choice(
        seq(kw("INHERITING"), kw("FROM"), $.identifier),
        kw("ABSTRACT"),
        kw("FINAL"),
        seq(kw("CREATE"), choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE"))),
        kwSeq("FOR TESTING"),
        seq(kwSeq("RISK LEVEL"), choice(kw("HARMLESS"), kw("DANGEROUS"), kw("CRITICAL"))),
        seq(kw("DURATION"), choice(kw("SHORT"), kw("MEDIUM"), kw("LONG"))),
        seq(kw("FRIENDS"), repeat1($.identifier)),
        kw("PUBLIC"),
        kwSeq("DEFERRED"),
        seq(kwSeq("LOCAL FRIENDS"), repeat1($.identifier)),
      ),

    _class_def_body: ($) =>
      repeat1(choice(
        $.visibility_section,
        $._statement,
      )),

    visibility_section: ($) =>
      seq(
        choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE")),
        kw("SECTION"),
        ".",
        repeat($._statement),
      ),

    // =========================================================================
    // Phase 3: CLASS IMPLEMENTATION
    // =========================================================================

    class_implementation: ($) =>
      seq(
        kw("CLASS"), $.identifier, kw("IMPLEMENTATION"), ".",
        repeat(choice($.method_implementation, $._statement)),
        kw("ENDCLASS"), ".",
      ),

    // =========================================================================
    // Phase 3: INTERFACE
    // =========================================================================

    method_implementation: ($) =>
      seq(
        kw("METHOD"), $.identifier, ".",
        repeat($._statement),
        kw("ENDMETHOD"), ".",
      ),

    // =========================================================================
    // Phase 3: INTERFACE in class body, ALIASES
    // =========================================================================

    initialization_statement: (_$) => kw("INITIALIZATION"),

    start_of_selection_statement: (_$) => kwSeq("START-OF-SELECTION"),

    end_of_selection_statement: (_$) => kwSeq("END-OF-SELECTION"),

    top_of_page_statement: ($) =>
      seq(kwSeq("TOP-OF-PAGE"), optional(seq(kw("DURING"), kwSeq("LINE-SELECTION")))),

    at_line_selection_statement: (_$) => kwSeq("AT LINE-SELECTION"),

    at_user_command_statement: (_$) => kwSeq("AT USER-COMMAND"),

    at_selection_screen_statement: ($) =>
      seq(
        kwSeq("AT SELECTION-SCREEN"),
        optional(choice(
          seq(kw("ON"), choice($.identifier, $.field_symbol)),
          seq(kw("ON"), kwSeq("VALUE-REQUEST"), kw("FOR"), $.identifier),
          seq(kw("ON"), kwSeq("HELP-REQUEST"), kw("FOR"), $.identifier),
          seq(kw("ON"), kw("BLOCK"), $.identifier),
          seq(kw("ON"), kwSeq("RADIOBUTTON GROUP"), $.identifier),
          seq(kw("ON"), kw("END"), kw("OF"), $.identifier),
          kw("OUTPUT"),
        )),
      ),

    // =========================================================================
    // Phase 4: IF / CASE / LOOP / DO / WHILE
    // =========================================================================

    case_statement: ($) =>
      seq(
        kw("CASE"), $._expression, ".",
        repeat($.when_clause),
        optional($.when_others_clause),
        kw("ENDCASE"), ".",
      ),

    case_type_statement: ($) =>
      seq(
        kw("CASE"), kw("TYPE"), kw("OF"), $._expression, ".",
        repeat($.when_type_clause),
        optional($.when_others_clause),
        kw("ENDCASE"), ".",
      ),

    when_clause: ($) =>
      seq(kw("WHEN"), commaSep1($._expression), ".", repeat($._statement)),

    when_type_clause: ($) =>
      seq(kw("WHEN"), kw("TYPE"), $._expression,
        optional(seq(kw("INTO"), $._expression)),
        ".", repeat($._statement)),

    when_others_clause: ($) =>
      seq(kw("WHEN"), kw("OTHERS"), ".", repeat($._statement)),

    do_statement: ($) =>
      seq(
        kw("DO"),
        optional(seq($._expression, kw("TIMES"))),
        ".",
        repeat($._statement),
        kw("ENDDO"), ".",
      ),

    while_statement: ($) =>
      seq(
        kw("WHILE"), $._expression, ".",
        repeat($._statement),
        kw("ENDWHILE"), ".",
      ),

    call_function_statement: ($) =>
      seq(kwSeq("CALL FUNCTION"), $._expression,
        repeat($._call_function_addition)),

    _call_function_addition: ($) =>
      choice(
        $._call_params,
        seq(kw("DESTINATION"), $._expression),
        kwSeq("IN UPDATE TASK"),
        kwSeq("IN BACKGROUND TASK"),
        seq(kwSeq("STARTING NEW TASK"), $._expression),
        seq(kwSeq("PERFORMING"), $.identifier, kw("ON"), kwSeq("END OF"), kw("TASK")),
        seq(kw("TABLES"), repeat1(seq($.identifier, "=", $._expression))),
      ),

    call_transaction_statement: ($) =>
      seq(kwSeq("CALL TRANSACTION"), $._expression,
        repeat(choice(
          kwSeq("AND SKIP FIRST SCREEN"),
          seq(kw("USING"), $._expression),
          seq(kw("MODE"), $._expression),
          seq(kw("UPDATE"), $._expression),
          seq(kw("MESSAGES"), kw("INTO"), $._expression),
        ))),

    call_screen_statement: ($) =>
      seq(kwSeq("CALL SCREEN"), $._expression,
        optional(seq(kwSeq("STARTING AT"), $._expression, $._expression)),
        optional(seq(kwSeq("ENDING AT"), $._expression, $._expression))),

    // =========================================================================
    // Phase 4: EXIT statements
    // =========================================================================

    leave_statement: ($) =>
      choice(
        seq(kw("LEAVE"), optional(kw("PROGRAM"))),
        seq(kw("LEAVE"), kw("TO"), kw("TRANSACTION"), $._expression),
        seq(kw("LEAVE"), kw("TO"), kw("SCREEN"), $._expression),
        seq(kw("LEAVE"), kwSeq("LIST-PROCESSING")),
        seq(kw("LEAVE"), kw("TO"), kwSeq("LIST-PROCESSING")),
      ),

    return_statement: (_$) => kw("RETURN"),
    exit_statement: (_$) => kw("EXIT"),
    check_statement: ($) => seq(kw("CHECK"), $._expression),
    continue_statement: (_$) => kw("CONTINUE"),

    // =========================================================================
    // Phase 5: Assignments
    // =========================================================================

    move_statement: ($) =>
      seq(kw("MOVE"), $._expression, kw("TO"), $._expression),

    assign_statement: ($) =>
      seq(kw("ASSIGN"), $._expression, kw("TO"), $.field_symbol,
        repeat(choice(
          seq(kw("CASTING"), optional(choice(
            seq(kw("TYPE"), $._type_expression),
            seq(kw("LIKE"), $._expression),
            seq(kw("TYPE"), kw("HANDLE"), $._expression),
          ))),
          seq(kw("TYPE"), $._type_expression),
          seq(kw("DECIMALS"), $._expression),
        ))),

    unassign_statement: ($) =>
      seq(kw("UNASSIGN"), $.field_symbol),

    clear_statement: ($) =>
      seq(kw("CLEAR"), $._expression,
        optional(choice(
          seq(kw("WITH"), $._expression),
          kwSeq("WITH NULL"),
        ))),

    free_statement: ($) =>
      seq(kw("FREE"), $._expression),

    get_reference_statement: ($) =>
      seq(kw("GET"), kw("REFERENCE"), kw("OF"), $._expression, kw("INTO"), $._expression),

    // =========================================================================
    // Phase 5: Internal table operations
    // =========================================================================

    authority_check_statement: ($) =>
      seq(kwSeq("AUTHORITY-CHECK OBJECT"), $._expression,
        repeat1(seq(kw("ID"), $._expression, choice(
          seq(kw("FIELD"), $._expression),
          kw("DUMMY"),
        )))),

    // =========================================================================
    // Phase 7: SET/GET PARAMETER
    // =========================================================================
