test/corpus/assign_statement.txt
================================================================================
Simple ASSIGN
================================================================================
ASSIGN lv_data TO <ls_data>.
--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (identifier)
    (field_symbol)))

================================================================================
ASSIGN with CASTING
================================================================================
ASSIGN lv_data TO <ls_data> CASTING.
--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (identifier)
    (field_symbol)))

================================================================================
ASSIGN with CASTING TYPE
================================================================================
ASSIGN lv_data TO <ls_data> CASTING TYPE string.
--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (identifier)
    (field_symbol)))

================================================================================
UNASSIGN field symbol
================================================================================
UNASSIGN <ls_data>.
--------------------------------------------------------------------------------

(source_file
  (unassign_statement
    (field_symbol)))

================================================================================
GET REFERENCE OF
================================================================================
GET REFERENCE OF ls_data INTO lr_ref.
--------------------------------------------------------------------------------

(source_file
  (get_reference_statement
    (identifier)
    (identifier)))
