test/corpus/assignments.txt
================================================================================
Clear statement
================================================================================
CLEAR lv_val.
--------------------------------------------------------------------------------

(source_file
  (clear_statement
    (identifier)))

================================================================================
Free statement
================================================================================
FREE lt_data.
--------------------------------------------------------------------------------

(source_file
  (free_statement
    (identifier)))

================================================================================
Move statement
================================================================================
MOVE lv_source TO lv_target.
--------------------------------------------------------------------------------

(source_file
  (move_statement
    (identifier)
    (identifier)))
