test/corpus/chained_statements.txt
================================================================================
Chained DATA
================================================================================
DATA: lv_name TYPE string,
      lv_age TYPE i.
--------------------------------------------------------------------------------

(source_file
  (chained_statement
    (identifier)
    (identifier)))

================================================================================
Chained CONSTANTS
================================================================================
CONSTANTS: gc_a TYPE i VALUE 1,
           gc_b TYPE i VALUE 2.
--------------------------------------------------------------------------------

(source_file
  (chained_statement
    (identifier)
    (number_literal
      (integer_literal))
    (identifier)
    (number_literal
      (integer_literal))))

================================================================================
Chained WRITE
================================================================================
WRITE: 'Line 1',
       'Line 2'.
--------------------------------------------------------------------------------

(source_file
  (chained_statement
    (string_literal)
    (string_literal)))
