test/corpus/comments.txt
================================================================================
Full line comment
================================================================================

* This is a full line comment

--------------------------------------------------------------------------------

(source_file
  (line_comment))

================================================================================
Inline comment after statement
================================================================================

42. " inline comment

--------------------------------------------------------------------------------

(source_file
  (number_literal
    (integer_literal))
  (comment))

================================================================================
Full line comment after statement
================================================================================

42.
* comment after statement

--------------------------------------------------------------------------------

(source_file
  (number_literal
    (integer_literal))
  (line_comment))
