test/corpus/constants_declaration.txt
================================================================================
Simple constant
================================================================================
CONSTANTS gc_max TYPE i VALUE 100.
--------------------------------------------------------------------------------

(source_file
  (constants_statement
    (identifier)
    (number_literal
      (integer_literal))))

================================================================================
String constant
================================================================================
CONSTANTS gc_name TYPE string VALUE 'hello'.
--------------------------------------------------------------------------------

(source_file
  (constants_statement
    (identifier)
    (string_literal)))

================================================================================
Constants begin/end of
================================================================================
CONSTANTS BEGIN OF gc_status.
CONSTANTS END OF gc_status.
--------------------------------------------------------------------------------

(source_file
  (constants_statement
    (identifier))
  (constants_statement
    (identifier)))
