test/corpus/create_object.txt
================================================================================
Simple CREATE OBJECT
================================================================================
CREATE OBJECT lo_obj.
--------------------------------------------------------------------------------

(source_file
  (create_object_statement
    (identifier)))

================================================================================
CREATE OBJECT with TYPE
================================================================================
CREATE OBJECT lo_obj TYPE zcl_class.
--------------------------------------------------------------------------------

(source_file
  (create_object_statement
    (identifier)
    (identifier)))

================================================================================
CREATE OBJECT with EXPORTING
================================================================================
CREATE OBJECT lo_obj TYPE zcl_class EXPORTING iv_name = 'test'.
--------------------------------------------------------------------------------

(source_file
  (create_object_statement
    (identifier)
    (identifier)
    (named_argument
      (identifier)
      (string_literal))))
