test/corpus/data_declaration.txt
================================================================================
Simple data declaration
================================================================================
DATA lv_name TYPE string.
--------------------------------------------------------------------------------

(source_file
  (data_statement
    (identifier)))

================================================================================
Data begin of structure
================================================================================
DATA BEGIN OF ls_struct.
--------------------------------------------------------------------------------

(source_file
  (data_statement
    (identifier)))

================================================================================
Data end of structure
================================================================================
DATA END OF ls_struct.
--------------------------------------------------------------------------------

(source_file
  (data_statement
    (identifier)))
