test/corpus/describe_field.txt
================================================================================
DESCRIBE FIELD type
================================================================================
DESCRIBE FIELD lv_data TYPE lv_type.
--------------------------------------------------------------------------------

(source_file
  (describe_field_statement
    (identifier)
    (identifier)))

================================================================================
DESCRIBE FIELD components
================================================================================
DESCRIBE FIELD lv_data COMPONENTS lv_num.
--------------------------------------------------------------------------------

(source_file
  (describe_field_statement
    (identifier)
    (identifier)))
