test/corpus/do_while_statement.txt
================================================================================
Simple DO loop
================================================================================
DO.
  EXIT.
ENDDO.
--------------------------------------------------------------------------------

(source_file
  (do_statement
    (exit_statement)))

================================================================================
DO with TIMES
================================================================================
DO 5 TIMES.
  CONTINUE.
ENDDO.
--------------------------------------------------------------------------------

(source_file
  (do_statement
    (number_literal
      (integer_literal))
    (continue_statement)))

================================================================================
DO with variable TIMES
================================================================================
DO lv_count TIMES.
  EXIT.
ENDDO.
--------------------------------------------------------------------------------

(source_file
  (do_statement
    (identifier)
    (exit_statement)))

================================================================================
Simple WHILE
================================================================================
WHILE lv_running = abap_true.
  EXIT.
ENDWHILE.
--------------------------------------------------------------------------------

(source_file
  (while_statement
    (binary_expression
      (identifier)
      (identifier))
    (exit_statement)))

================================================================================
Nested DO/WHILE
================================================================================
DO 3 TIMES.
  WHILE lv_cond > 0.
    EXIT.
  ENDWHILE.
ENDDO.
--------------------------------------------------------------------------------

(source_file
  (do_statement
    (number_literal
      (integer_literal))
    (while_statement
      (binary_expression
        (identifier)
        (number_literal
          (integer_literal)))
      (exit_statement))))
