test/corpus/event_blocks.txt
================================================================================
INITIALIZATION
================================================================================
INITIALIZATION.
--------------------------------------------------------------------------------

(source_file
  (initialization_statement))

================================================================================
START-OF-SELECTION
================================================================================
START-OF-SELECTION.
--------------------------------------------------------------------------------

(source_file
  (start_of_selection_statement))

================================================================================
END-OF-SELECTION
================================================================================
END-OF-SELECTION.
--------------------------------------------------------------------------------

(source_file
  (end_of_selection_statement))

================================================================================
TOP-OF-PAGE
================================================================================
TOP-OF-PAGE.
--------------------------------------------------------------------------------

(source_file
  (top_of_page_statement))

================================================================================
AT SELECTION-SCREEN
================================================================================
AT SELECTION-SCREEN.
--------------------------------------------------------------------------------

(source_file
  (at_selection_screen_statement))

================================================================================
AT SELECTION-SCREEN ON field
================================================================================
AT SELECTION-SCREEN ON p_name.
--------------------------------------------------------------------------------

(source_file
  (at_selection_screen_statement
    (identifier)))

================================================================================
AT LINE-SELECTION
================================================================================
AT LINE-SELECTION.
--------------------------------------------------------------------------------

(source_file
  (at_line_selection_statement))

================================================================================
AT USER-COMMAND
================================================================================
AT USER-COMMAND.
--------------------------------------------------------------------------------

(source_file
  (at_user_command_statement))
