test/corpus/exit_statements.txt
================================================================================
RETURN statement
================================================================================
RETURN.
--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
EXIT statement
================================================================================
EXIT.
--------------------------------------------------------------------------------

(source_file
  (exit_statement))

================================================================================
CONTINUE statement
================================================================================
CONTINUE.
--------------------------------------------------------------------------------

(source_file
  (continue_statement))

================================================================================
CHECK expression
================================================================================
CHECK lv_val > 0.
--------------------------------------------------------------------------------

(source_file
  (check_statement
    (binary_expression
      (identifier)
      (number_literal
        (integer_literal)))))

================================================================================
LEAVE PROGRAM
================================================================================
LEAVE PROGRAM.
--------------------------------------------------------------------------------

(source_file
  (leave_statement))

================================================================================
LEAVE TO TRANSACTION
================================================================================
LEAVE TO TRANSACTION 'SE80'.
--------------------------------------------------------------------------------

(source_file
  (leave_statement
    (string_literal)))

================================================================================
LEAVE TO SCREEN
================================================================================
LEAVE TO SCREEN 100.
--------------------------------------------------------------------------------

(source_file
  (leave_statement
    (number_literal
      (integer_literal))))

================================================================================
LEAVE LIST-PROCESSING
================================================================================
LEAVE LIST-PROCESSING.
--------------------------------------------------------------------------------

(source_file
  (leave_statement))
