test/corpus/export_import.txt
================================================================================
EXPORT to memory
================================================================================
EXPORT lv_data TO MEMORY ID 'MYID'.
--------------------------------------------------------------------------------

(source_file
  (export_statement
    (identifier)
    (string_literal)))

================================================================================
IMPORT from memory
================================================================================
IMPORT lv_data FROM MEMORY ID 'MYID'.
--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (string_literal)))

================================================================================
EXPORT with named values
================================================================================
EXPORT name = lv_name age = lv_age TO MEMORY ID 'TEST'.
--------------------------------------------------------------------------------

(source_file
  (export_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (string_literal)))
